--- a/estilos/estilos-replica.css
+++ b/estilos/estilos-replica.css
@@ -1,51 +1,91 @@
+body {
+    margin: 0;
+}
 
-
-ul{
+ul {
     list-style: none;
 
 }
-li a{
+
+li a {
     color: floralwhite;
     text-decoration: none;
-    padding:0 8px;
+    padding: 0 8px;
     border-right: 1px solid floralwhite;
 }
-.eliminar-linea{
+
+.eliminar-linea {
     border-right: none;
 }
-.color-fondo-del-menu{
-    background-image:linear-gradient(black,gray)
+
+.color-fondo-del-menu {
+    background-image: linear-gradient(black, gray)
 }
-ul li{
+
+ul li {
     padding: 10px 0;
 }
-.text{
-color: floralwhite;
+
+.text {
+    color: floralwhite;
 }
-.icono{
+
+.icono {
     color: seashell;
-padding:0 20px;
+    padding: 0 20px;
 }
-@media(min-width:1000px){
-    span.icono{
-        display: none;}
-        span.text{
-            display: inline-block;}
-            .alinear{
-    display: flex;
-    justify-content: center;
-   /* justify-content: space-around;*/
-}
-}
-@media(max-width:1000px){
-    span.icono{
-        display: inline-block;
-    }
-    span.text{
+
+@media(min-width:1000px) {
+    span.icono {
         display: none;
     }
-    .alinear{
-    display: block;
+
+    span.text {
+        display: inline-block;
+    }
+
+    .alinear {
+        display: flex;
+        justify-content: center;
+        /* justify-content: space-around;*/
+    }
 }
+
+@media(max-width:1000px) {
+    span.icono {
+        display: inline-block;
+    }
+
+    span.text {
+        display: none;
+    }
+
+    .alinear {
+        display: block;
+        position: relative;
+        /* top: 25%;*/
+        width: 100%;
+        /* text-align: center;*/
+        margin-top: 30px;
+    }
+
+    .overlay {
+        height: 0;
+        width: 100%;
+        /*height: 100%;
+    width: 0;*/
+        position: fixed;
+        z-index: 1;
+        top: 0;
+        left: 0;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.9);
+        /* overflow-x: hidden;*/
+        transition: 0.5s;
+    }
+
+    .icono {
+        color: black;
+    }
 
 }
