--- a/estilos/estilos-replica.css
+++ b/estilos/estilos-replica.css
@@ -48,21 +48,38 @@ ul li {
         display: flex;
         justify-content: space-around;
         /*justify-content: center;*/
-        align-items: flex-start;
+        align-items: center;
         /* justify-content: space-around;*/
     }
 }
 
-@media(max-width:1000px) {
+ @media(max-width :1000px) and (min-width:640px){
+      .alinear {
+        display: flex;
+        justify-content: space-around;
+        /*justify-content: center;*/
+        align-items: center;
+        /* justify-content: space-around;*/
+    }
+ }
+@media(max-width:640px) and (min-width:300px){
     span.icono {
         display: inline-block;
     }
-
-    span.text {
+    ul.alinear{
         display: none;
     }
-
-    .alinear {
+    .alinear-1{
+        display:block ;
+        position: relative;
+        width: 100%;
+        margin-top: 30px;
+    }
+    .alinear-2{
+        display: flex;
+        justify-content: space-around;
+    }
+.alinear {
         display: block;
         position: relative;
         /* top: 25%;*/
@@ -101,8 +118,8 @@ ul li {
     .centrar-boton-menu{
         /*padding-top: 10px;*/
         padding-left :0px ;
-        padding-bottom: 40px;
-        margin-bottom: 40px;
+       /* padding-bottom: 40px;*/
+      /*  margin-bottom: 40px;*/
     }
     .tipo-de-letra-titulo{
         font-family: 'Italiana', serif;
@@ -114,4 +131,5 @@ ul li {
         font-family: 'Tenali Ramakrishna', sans-serif;
         color: black;
     }
+   
 
