--- a/estilos/estilos-replica.css
+++ b/estilos/estilos-replica.css
@@ -72,7 +72,7 @@ div.boton-menu{
         /* justify-content: space-around;*/
     }
  }
-@media(max-width:640px) and (min-width:300px){
+@media(max-width:640px){
     span.icono {
         display: inline-block;
     }
