--- a/estilos/estilos-replica.css
+++ b/estilos/estilos-replica.css
@@ -7,12 +7,7 @@ ul {
 
 }
 
-li a {
-    color: floralwhite;
-    text-decoration: none;
-    padding: 0 8px;
-    border-right: 1px solid floralwhite;
-}
+
 
 .eliminar-linea {
     border-right: none;
@@ -22,13 +17,8 @@ li a {
   background-color: rgb(248, 239, 225);
 }
 
-ul li {
-    padding: 10px 0;
-}
 
-.text {
-    color: black;
-}
+
 
 .icono {
     color: seashell;
@@ -36,6 +26,33 @@ ul li {
 }
 
 @media(min-width:1000px) {
+    
+.text {
+    color: black;
+    font-size: 21px;
+}
+    span.text{
+        padding-left: 80px;
+    }
+    ul{
+        margin: 0 80px;
+    }
+    ul li {
+    padding: 30px 0;
+   /* margin: 0 30px;*/
+}
+    li a {
+        
+        font-size: 21px;
+    color: floralwhite;
+    text-decoration: none;
+    padding:0 30px;
+    border-right: 1px solid floralwhite;
+}
+   
+    div.centrar-boton-menu{
+    display: none;
+}
     span.icono {
         display: none;
     }
@@ -62,6 +79,8 @@ div.boton-menu{
         /* justify-content: space-around;*/
     }
 }
+
+
 
  @media(max-width :1000px) and (min-width:640px){
       .alinear {
